--- a/src/app/order/order-new/order-new.component.scss
+++ b/src/app/order/order-new/order-new.component.scss
@@ -55,14 +55,24 @@
     overflow-y: scroll;
 }
 
+.productInOrderLabel{
+    height: 3rem!important;
+    padding-top: 1.1rem!important;
+}
+
 .productsButtonContainer{
     padding:0;
-    padding-left: .5rem;
+    padding-left: 0px;
     padding-top: .5rem;
     margin-left: 0px;
     margin-right: 0px;
     height: 15%;
-    width: 25%;    
+    width: 30%;    
+}
+
+.usersOrderingLabel{
+    padding-top: 1.2rem!important;
+    height: 4rem!important;
 }
 
 .productButton{
@@ -96,9 +106,9 @@
 
 .customSubtittle{
     font-size: 80%!important;
-    padding-top: .5rem;
+    padding-top: 0px;
     padding-bottom: .5rem;
-    padding-left:1.5rem;
+    padding-left:1.1rem;
 }
 
 .customTextColor{
@@ -175,7 +185,7 @@
 }
 
 .productLine{
-    border-bottom: solid 1px #d0d0d0;
+    // border-bottom: solid 1px #d0d0d0;
     padding-top: .5rem;
 }
 
@@ -183,7 +193,7 @@
     background-color: #718239;
     color: white;
     font-weight: bold;
-    padding-top: .75rem;
+    padding-top: 1.4rem;
     padding-bottom: .75rem;
 
 }
