--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,6 +27,13 @@
           <div *ngIf="f.password.errors.required">La contraseña es requerida</div>
         </div>
       </div>
+      <div class="col-md-12 col-lg-12 col-sm-12 md-form form-sm pt-1 pb-3 pr-3 pl-3">
+        <div class="row pl-2">
+          <mdb-checkbox [class.checkbox-primary-custom]="true" formControlName="keepLoggedIn">
+            {{ 'Login.keepLoggedIn' | translate }}
+          </mdb-checkbox>
+        </div>
+      </div>
       <div class="form-group">
         <button [disabled]="loading" rounded="true" [class.btn-primary-custom]="true" [class.btn-primary-custom]="true"
           mdbBtn mdbWavesEffect type="submit">Ingresar</button>
