Adding delay to loader

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,4 +84,4 @@
 	</div>
 </div>
 
-<ng-http-loader spinner="sk-three-bounce"></ng-http-loader>
+<ng-http-loader spinner="sk-three-bounce" debounceDelay="200"></ng-http-loader>
